force-app/main/default/objects/pymtTest__Transaction_Line_Item__c/pymtTest__Transaction_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Transaction Line Item</label>
    <pluralLabel>Transaction Line Items</pluralLabel>
    <nameField>
        <label>Line Item Number</label>
        <type>AutoNumber</type>
        <displayFormat>TLI-{00000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Stores products purchased in a transaction for payment-first workflows. Provides audit trail and data for Order/Invoice creation.</description>
</CustomObject>