force-app/main/default/objects/pymtTest__Transaction_Line_Item__c/fields/pymtTest__Order_Product__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Order_Product__c</fullName>
    <label>Order Product</label>
    <type>Lookup</type>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Transaction Line Items</relationshipLabel>
    <relationshipName>Transaction_Line_Items</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to created OrderItem (populated by OrderFulfillmentQueueable)</description>
    <inlineHelpText>The Order Product that was created from this line item</inlineHelpText>
</CustomField>