force-app/main/default/objects/pymtTest__Transaction_Line_Item__c/fields/pymtTest__Product__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Product__c</fullName>
    <label>Product</label>
    <type>Lookup</type>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Transaction Line Items</relationshipLabel>
    <relationshipName>Transaction_Line_Items</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product being purchased</description>
    <inlineHelpText>The product associated with this line item</inlineHelpText>
</CustomField>