force-app/main/default/objects/pymtTest__Transaction_Line_Item__c/fields/pymtTest__Total_Price__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Total_Price__c</fullName>
    <label>Total Price</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <formula>pymtTest__Quantity__c * pymtTest__Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <description>Calculated total: Quantity x Unit Price</description>
    <inlineHelpText>Line item total (Quantity × Unit Price)</inlineHelpText>
</CustomField>