force-app/main/default/objects/pymtTest__Transaction_Line_Item__c/fields/pymtTest__Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Unit_Price__c</fullName>
    <label>Unit Price</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <required>true</required>
    <description>Price per unit (from PricebookEntry or override)</description>
    <inlineHelpText>The price per unit for this product</inlineHelpText>
</CustomField>